alignment fixes

--- a/styles/css/base.css
+++ b/styles/css/base.css
@@ -29,6 +29,10 @@ body {
   font-size: 1.6rem;
 }
 
+section {
+  overflow: hidden;
+}
+
 @media only screen and (max-width: 68.75em) {
   html {
     font-size: 50%;
