--- a/styles/css/pages/_landing.css
+++ b/styles/css/pages/_landing.css
@@ -428,7 +428,12 @@
     width: 100%;
     text-align: center;
   }
+
   .home__actions {
+    margin: 4rem auto;
+  }
+
+  .home__actions--bottom {
     margin: 4rem auto;
   }
 
