--- a/styles/css/pages/_sites.css
+++ b/styles/css/pages/_sites.css
@@ -193,7 +193,7 @@
   .site-hero-glow {
     display: none;
   }
-  .home__actions {
+  .site.home__actions {
     margin-left: 0;
   }
   .unparralled-card {
